# app-improvement-stages

./: .gitignore  README.md  pyproject.toml
0_jupyter_notebook/: iris_classifier.ipynb
1_monolith_cli/: iris_classifier_monolith_cli_app.py
2_monolith_user_input_loop/: iris_classifier_monolith_user_input_loop_app.py
3_client_server/: iris_classifier_cli_client_rest.py  iris_classifier_rest_server.py
4_message_queue/: database.py  iris_classifier_mq_worker.py  persister.py
4_multiple_clients_message_queue/: iris_classifier_cli_client_mq.py
5_task_queue/: docker-compose.yml  iris_classifier_cli_client_task_queue.py  iris_classifier_task_queue_worker.py  kafka_setup.py
6_pydantic/: pydantic_example.py
client_server/: iris_classifier_cli_client.py  iris_classifier_rest_server.py
common/: iris_dto.py  utils.py
jupyter_notebook/: iris_classifier.ipynb
monolith_cli/: iris_classifier_monolith_cli_app.py
monolith_user_input_loop/: iris_classifier_monolith_user_input_loop_app.py
